# multi-ai-cli

./: CLAUDE.md  Cargo.toml  Makefile  README.md  apps.jsonc  git-worktree-config.jsonc  multi-ai-config.jsonc
example-configs/: multi-ai-config.jsonc  multi-ai-config.yaml  settings.json  settings.jsonc
src/: config.rs  error.rs  git.rs  init.rs  iterm2.rs  main.rs  picker.rs  review.rs  send.rs  tmux.rs  worktree.rs
