[package]
name = "multi-ai"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "multi-ai"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonc-parser = { version = "0.26", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
shellexpand = "3.1"
