[package]
name = "multi-ai"
version = "0.20.3"
edition = "2024"

[[bin]]
name = "mai"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonc-parser = { version = "0.29", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
shellexpand = "3.1"
ratatui = "0.30"
